--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-# Compiled source #
-###################
 *.pyc
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+*.pyo
+app.db
+search.db
+flask
