--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
 Flask==0.10.1
-Flask-CouchDB==0.2.1
 Flask-DebugToolbar==0.8.0
 Flask-HTAuth==0.1.2
 Flask-Login==0.2.6
 Flask-Mail==0.9.0
 Flask-OAuth==0.12
-Flask-OpenID==1.1.1
 Flask-Principal==0.4.0
 Flask-Script==0.6.2
 Flask-Security==1.6.8
 Flask-Social==1.6.1
 Flask-WTF==0.8.4
 Jinja2==2.7.1
+MarkupSafe==0.18
 WTForms==1.0.4
 Werkzeug==0.9.3
+argparse==1.2.1
+blinker==1.3
+facebook-sdk==0.4.0
 flask-mongoengine==0.7.0
+httplib2==0.8
 itsdangerous==0.23
 mongoengine==0.8.3
+oauth2==1.5.211
+passlib==1.6.1
 pymongo==2.5.2
+python-dateutil==2.1
+python-openid==2.2.5
+six==1.3.0
+uWSGI==1.9.14
+wsgiref==0.1.2
