--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ argparse==1.2.1
 blinker==1.3
 facebook-sdk==0.4.0
 flask-mongoengine==0.7.0
+gunicorn==18.0
 httplib2==0.8
 itsdangerous==0.23
 mongoengine==0.8.3
