--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ passlib==1.6.1
 pymongo==2.5.2
 python-dateutil==2.1
 python-openid==2.2.5
+simplejson==3.3.0
 six==1.3.0
 uWSGI==1.9.14
 wsgiref==0.1.2
